# ARIS-prod

./: .gitignore  PHASE_1_CONTRACT.md  README.md  debug_entities.py  demo_phase2.py  example_input_interface.py  example_memory_store.py  example_reasoning_engine.py  example_thread_safety.py  fix_test_docs.py  fix_test_simple.py  pyproject.toml
aris/: __init__.py  __main__.py  comparative_runner.py  document_ingestion.py  evaluation.py  input_interface.py  knowledge_graph.py  logging_config.py  memory_store.py  reasoning_engine.py  research_planner.py  run_loop.py  tool.py  trace_replay.py
aris/core/: __init__.py  comparative_runner.py  evaluation.py  input_interface.py  memory_store.py  reasoning_engine.py  run_loop.py  trace_replay.py
aris/graph/: __init__.py  document_ingestion.py  hypothesis_induction.py  knowledge_graph.py  research_planner.py
aris/ml/: __init__.py  ontology_induction.py  relation_induction.py  role_induction.py
tests/: __init__.py  test_cli.py  test_comparative_runner.py  test_document_ingestion.py  test_evaluation.py  test_input_interface.py  test_knowledge_graph.py  test_knowledge_graph_simple.py  test_memory_store.py  test_reasoning_engine.py  test_research_planner.py  test_run_loop.py  test_tool.py  test_trace_replay.py
tests/core/: __init__.py  test_comparative_runner.py  test_evaluation.py  test_input_interface.py  test_memory_store.py  test_reasoning_engine.py  test_run_loop.py  test_tool.py  test_trace_replay.py
tests/graph/: __init__.py  test_document_ingestion.py  test_hypothesis_induction.py  test_knowledge_graph.py  (+2 more)
(+5 files in other folders)
